font align and font size fixed

--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0 auto;
+}
+
 header {
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Banner\ Image.png');
     color: #FFF;
@@ -126,6 +130,7 @@ header {
     margin-top: 30px;
 }
 
+/* Coming Soon Section */
 .best-offer {
     margin: 50px 140px;
     display: flex;
@@ -135,6 +140,28 @@ header {
 
 .best-offer-soon {
     padding-left: 30px;
+}
+
+.best-offer-subtitle{
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.best-offer-title {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.best-offer-descrip{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
 }
 
 .best-offer-img {
@@ -148,11 +175,79 @@ header {
     padding-right: 30px;
 }
 
+.best-offer-2024-titles{
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.best-offer-2024-descrip {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+}
+
 .best-offer-2024-img {
     padding-top: 43px;
 
 }
 
+/* Holidays Sale 50% */
+.holidays-section {
+    margin: 50px 140px;
+    text-align: center;
+}
+
+.holidays-subtitle {
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.holidays-title{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+}
+
+.holidays-descirption{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0px 80px;  
+}
+
+
+/* Our Awesome Porfolio Section */
+.awesome-portfolio-subtitle {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.awesome-portfolio-title {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.awesome-portfolio-descirption {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    padding-right: 350px;
+}
 
 .awesome-portfolio-section{
     align-items: center;
@@ -175,6 +270,8 @@ header {
     height: 400px;
 }
 
+
+/* Subscribe Newsletter */
 .newsletter {
     border-radius: 16px;
     background: rgba(255, 0, 0, 0.05);
@@ -220,6 +317,7 @@ header {
     font-weight: 700;
 }
 
+
 /* footer section */
 footer {
     background-color: #070211;
@@ -236,13 +334,19 @@ footer {
 }
 
 hr {
-    color: rgba(255, 255, 255, 0.15);
+    border: 1px solid rgba(255, 255, 255, 0.15);
 }
 
 .footer-address {
     display: flex;
     margin-top: 50px;
     justify-content: space-between;
+}
+
+.footer-contact-img {
+    width: 15px;
+    height: 15px;
+    margin-right: 3px;
 }
 
 .social-links {
